--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ pnpm-debug.log*
 
 yarn.lock
 pnpm-lock.yaml
+
 # package-lock.json  ← оставляем в репозитории
 
 ##################################################
@@ -74,6 +75,7 @@ pnpm-lock.yaml
 ##################################################
 # Firebase / Private keys
 ##################################################
+google-services.json
 
 firebase-admin-key.json
 serviceAccountKey.json
